# sync-code

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  sync.rs
tests/: test.rs
tests/data1/: source.txt  target.txt
tests/data2/: expected.txt  source.txt  target.txt
tests/data3/: expected.txt  source.txt  source2.txt  target.txt
