[package]
    authors = ["Jalon Wong <jalonwong@gmail.com>"]
    description = "Synchronize code blocks between different files"
    documentation = "https://docs.rs/sync-code"
    edition = "2024"
    keywords = ["build", "sync", "code"]
    license = "MIT OR Apache-2.0"
    name = "sync-code"
    readme = "README.md"
    repository = "https://github.com/mcu-rust/sync-code"
    version = "0.1.4"

[lib]
    doc = true
    doctest = false

[dependencies]
    regex = "1.12.2"
